# homework_19._2

./: .env_example  .flake8  .gitignore  README.md  linters.sh  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html
catalog/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json  categories.json  groups_fixture.json  permissions_fixture.json  products.json
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_alter_product_category.py  0003_alter_version_unique_together.py  0004_alter_product_title.py  0004_product_owner.py  0005_alter_category_title.py  0005_alter_product_options_product_is_published.py  0006_alter_product_options.py  0007_alter_product_is_published.py  0008_alter_product_options.py
catalog/templates/catalog/: category_list.html  contacts.html  home.html  product_form.html  product_info.html  version_form.html  version_list.html
catalog/templates/templatetags/: my_tags.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
release/: urls.py
templates/includes/: base.html  header.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/management/commands/: create_superuser.py  fill.py
user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_token.py
(+8 files in other folders)
