[tool.poetry]
name = "pip install poetry"
version = "0.1.0"
description = ""
authors = [" annavaleriev <filenko.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.1"
Pillow = "10.3.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
